Horizontale Scrollbar bei Flexslider entfernt (Issue #2)
Fährt jetzt zwar nicht mehr so schön von außen rein, sondern blendet
nur noch ein, ließ sich aber nicht anders lösen.

--- a/css/basemod_flexslider.css
+++ b/css/basemod_flexslider.css
@@ -65,8 +65,9 @@ html[xmlns] .slides {display: block;}
 .flex-direction-nav {*height: 0;}
 .flex-direction-nav a  { display: block; width: 40px; height: 40px; margin: 0 0; position: absolute; top: 50%; z-index: 10; overflow: hidden; line-height: 1;opacity: 0; cursor: pointer; color: rgba(0,0,0,0.8); text-shadow: 1px 1px 0 rgba(255,255,255,0.3); -webkit-transition: all .3s ease; -moz-transition: all .3s ease; transition: all .3s ease; }
 #content .flex-direction-nav a:hover { background-color:transparent; border-bottom:none;color:#1559A6;}
-.flex-direction-nav .flex-prev { left: -50px; }
-.flex-direction-nav .flex-next { right: -50px; text-align: right; }
+/*.flex-direction-nav .flex-prev { left: -50px; }
+.flex-direction-nav .flex-next { right: -50px; text-align: right; }*/
+.flex-direction-nav .flex-next {text-align: right;}
 .flexslider:hover .flex-prev { opacity: 0.7; left: 10px; }
 .flexslider:hover .flex-next { opacity: 0.7; right: 10px; }
 .flexslider:hover .flex-next:hover, .flexslider:hover .flex-prev:hover { opacity: 1; }
